src/screens/snapshots/pmp__screens__task_form__tests__task_form_edit_mode_snapshot.snap
---
source: src/screens/task_form.rs
expression: "render_to_string(&form, 60, 28)"
---
┌Edit Task─────────────────────────────────────────────────┐
│┌Name────────────────────────────────────────────────────┐│
││Auth                                                    ││
│└────────────────────────────────────────────────────────┘│
│┌Description─────────────────────────────────────────────┐│
││desc                                                    ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
│┌Status (←/→)────────────────────────────────────────────┐│
││In Progress                                             ││
│└────────────────────────────────────────────────────────┘│
│┌Priority (←/→)──────────────────────────────────────────┐│
││High                                                    ││
│└────────────────────────────────────────────────────────┘│
│┌Dependencies (0 selected)───────────────────────────────┐│
││No dependencies                                         ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
│┌Notes (0)───────────────────────────────────────────────┐│
││No notes yet                                            ││
││                                                        ││
││┌New note──────────────────────────────────────────────┐││
│││                                                      │││
││└──────────────────────────────────────────────────────┘││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘
