src/screens/snapshots/pmp__screens__task_form__tests__task_form_with_error_snapshot.snap
---
source: src/screens/task_form.rs
expression: "render_to_string(&form, 60, 28)"
---
┌Create Task───────────────────────────────────────────────┐
│┌Name────────────────────────────────────────────────────┐│
││                                                        ││
│└────────────────────────────────────────────────────────┘│
│┌Description─────────────────────────────────────────────┐│
││                                                        ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
│┌Status (←/→)────────────────────────────────────────────┐│
││Todo                                                    ││
│└────────────────────────────────────────────────────────┘│
│┌Priority (←/→)──────────────────────────────────────────┐│
││Medium                                                  ││
│└────────────────────────────────────────────────────────┘│
│┌Dependencies (0 selected)───────────────────────────────┐│
│└────────────────────────────────────────────────────────┘│
│┌Notes (0)───────────────────────────────────────────────┐│
││No notes yet                                            ││
││                                                        ││
││┌New note──────────────────────────────────────────────┐││
│││                                                      │││
││└──────────────────────────────────────────────────────┘││
│└────────────────────────────────────────────────────────┘│
│┌────────────────────────────────────────────────────────┐│
││Task name cannot be empty                               ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘
